# motor_for_robot

controlldog/: CMakeLists.txt  package.xml
controlldog/src/: controlldog.cpp
dynamixel_motor/dynamixel_controllers/launch/: controller_manager.launch
dynamixel_motor/dynamixel_tutorials/launch/: controller_spawner.launch
motor/: CMakeLists.txt  package.xml  run_motor.sh
motor/config/: dynamixel_mx28.yaml
motor/doc/: readme.md
motor/launch/: motor_command.launch  motor_manager.launch  motor_manager5.launch
motor/src/: motor.cpp
